# chat-analytics

./: .gitattributes  .gitignore  .npmignore  .prettierignore  .prettierrc  DOCS.md  Dockerfile  LICENSE  README.md  TODO.md  docker-compose.yaml  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  tsconfig.web.json  webpack.config.js  wrangler.toml
analyzer/: Analyzer.ts  Parser.ts  Types.ts  Utils.ts
app/: Demo.ts  HomePage.tsx  LandingPage.tsx  Platforms.tsx  WebEnv.ts  WorkerApp.ts  index.tsx
assets/: Favicon.ts  PlatformLogos.tsx  Platforms.tsx  Plausible.ts  Types.d.ts  app.html  app.less  report.html  report.less
docs/: CHANGELOG.md  DEV.md  PARSER.md  PIPELINE.md  README.md  TESTS.md  TODO.md
lib/: CLI.ts  NodeEnv.ts  index.ts
pipeline/: Analyzer.ts  Attachments.ts  Compression.ts  Env.ts  File.ts  Generation.ts  Languages.ts  Messages.d.ts  Parser.ts  Platforms.ts  Progress.ts  README.md  Text.ts  Time.ts  Types.d.ts  Types.ts  Util.ts  Utils.ts  index.ts
pipeline_rs/: Cargo.toml
pipeline_rs/src/: lib.rs
pipeline_rs/src/parse/: discord.rs  file.rs  json.rs  mod.rs  util.rs
report/: Basic.ts  BlockHook.ts  BlockHooks.ts  BlockStore.ts  DataDispatcher.ts  DataProvider.ts  Experiments.tsx  Header.tsx  ReportPage.tsx  Tabs.tsx  WorkerReport.ts  WorkerWrapper.ts  index.tsx
site/: DataProvider.ts  HomePage.tsx  Report.tsx  ReportPage.tsx  Worker.ts  index.tsx
tests/: Attachments.test.ts  BitStream.test.ts  Database.test.ts  DiscordParser.test.ts  JSONStream.test.ts  Plausible.test.ts  Progress.test.ts  README.md  Report.test.ts  (+3 more)
(+373 files in other folders)
